recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: Missing closing brace `}' assumed here
def aux (level:Int, length:Double)=
^